# MedicalDataKit

./: .gitignore  README.md  config.py  pyproject.toml
MedDataKit/: downloader.py  utils.py
MedDataKit/data_pipe_routines/: data_encoding_routines.py  data_type_routines.py  missing_data_routines.py
MedDataKit/dataset/: base_dataset.py  base_ml_task_dataset.py  base_raw_dataset.py  bioinfo_dataset.py  clinical_dataset.py  kaggle_dataset.py  medical_dataset.py  repo_dataset.py  survey_dataset.py  vdb_dataset.py
MedDataKit/prediction/: prediction.py
docs/: CNAME  app.json
notebook/: data_fetch.ipynb  federated.ipynb  test.ipynb
shiny-app/: app.py
src/: dataset.py  downloader.py
src/data/dermatology/downloaded_data/: data.csv
src/dataset/: base_dataset.py  medical_dataset.py
tests/: test_data.py
